---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: "String::from_utf8(buf).unwrap()"
---
Error: cannot return outside of function
   ╭─[<test>:1:1]
   │
 1 │ return
   │ ───┬──  
   │    ╰──── invalid when not in a function
───╯

